new products - Age of Control

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -20,6 +20,9 @@
 <div id="training-overview">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/UWXw1ll9B3U?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="ageOfControl-2inBA">
+  <iframe width="854" height="480" src="https://player.vimeo.com/video/353393142" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <!-- WB -->
 <div id="air-knife-vid">
