--- a/manuals.html
+++ b/manuals.html
@@ -108,7 +108,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/2inch-badger">BA-LK-P4, BA-BSPP4,<br>BA-MP6R, BA-MP9L,<br>BA-MP9R</a></td>
                 <td>2" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 06/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA2_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2017</small></td>
                 <td class="text-center"></td>
@@ -124,7 +124,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/4inch-badger">BA-P6, BA-BSPP6,<br>BA-TM12</a></td>
                 <td>4" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 06/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2018</small></td>
                 <td class="text-center"></td>
@@ -132,7 +132,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/6inch-badger">BA-P8, BA-MP9,<br>BA-M24</a></td>
                 <td>6" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 06/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA6_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"></td>
@@ -202,35 +202,35 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/bjv">BJV-P16</a></td>
+                <td><a href="/bjv">BJVE-P16</a></td>
                 <td>10K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJV-P16_Manual.pdf" target="_blank" class="btn btn-sm">PL 537</a><br><small class="grey">Updated: 02/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/bjv">BJV-P12</a></td>
+                <td><a href="/bjv">BJVE-P12</a></td>
                 <td>15K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJV-P12_Manual.pdf" target="_blank" class="btn btn-sm">PL 504</a><br><small class="grey">Updated: 02/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/bjv">BJV-M24</a></td>
-                <td>22K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJV-M24_Manual.pdf" target="_blank" class="btn btn-sm">PL 509</a><br><small class="grey">Updated: 02/2017</small></td>
-                <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/bjv">BJV-MP12</a></td>
+                <td><a href="/bjv">BJVE-M24</a></td>
                 <td>22K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank" class="btn btn-sm">PL 506</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/bjv">BJVE-MP12</a></td>
+                <td>22K PSI<br>Self-rotary swivel</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 667</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -238,7 +238,7 @@ permalink: /manuals
                 <td>40K PSI<br>Self-rotary swivel</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank" class="btn btn-sm">PL 519</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -376,6 +376,14 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/manuals/NAV-100_manual.pdf" target="_blank" class="btn btn-sm">PL 613</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/NAV_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/NAV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 05/2019</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/navigator">PROP-300</a></td>
+                <td>ProPositioner<br>Single-lance positioning for ABX-PRO</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/PROP-300_manual.pdf" target="_blank" class="btn btn-sm">PL 675</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
