--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -28,29 +28,25 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-01.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-12.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-12.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/nle0DdQzXMc"> </a>
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-02.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-09.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-09.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-03.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-10.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-10.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-04.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-04.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-11.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-11.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-07.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-07.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-06.jpg" alt="Badger high pressure cleaning for small pipes with bends">
-            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-06.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/badger-2in-08.jpg" alt="Badger high pressure cleaning for small pipes with bends">
+            <img class="ms-thumb" src="/assets/img/product/thumb-badger-2in-08.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -73,15 +69,14 @@ master-slider: yes
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>The only self-rotary tool on the market that can navigate 2 in. (50 mm) pipes with bends</li>
-        <li>The only tool in the industry with head locking technology for increased safety</li>
-        <li>Unique compact design allows the tool to easily navigate pipe bends</li>
+        <li>Navigates pipes with bends as small as 2 inches (51 mm) in diameter</li>
+        <li>Easily replaceable drilled head design &mdash; swap out quickly to change jet patterns, low-cost replacement</li>
         <li>Multiple jetting options allow the tool to be optimized for a variety of pump pressures and flows - unplug, polish, or run longer lines based on jetting</li>
         <li>Optional fairing available to streamline tool during retrieval</li>
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/abx-500" data-toggle="tooltip" title="AutoBox ABX-500">500</a> <a class="btn" href="/prodrain" data-toggle="tooltip" title="ProDrain PRO-700">700</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a> <a class="btn" href="/abx-500" data-toggle="tooltip" title="AutoBox ABX-500">500</a> <a class="btn" href="/prodrain" data-toggle="tooltip" title="ProDrain PRO-700">700</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -126,21 +121,17 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BA-LK-P4, BA-LK-BSPP4</td>
+                      <td colspan="2">BA-LKD-P4, BA-LKD-BSPP4</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>2–15k psi</td>
-                      <td><span class="metric">140–1000 bar</span>
+                      <td>8–15k psi</td>
+                      <td><span class="metric">552–1034 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>5–20 gpm</td>
-                      <td><span class="metric">19–76 l/min</span></td>
-                    </tr>
-                    <tr>
-                      <th>Flow Coefficient</th>
-                      <td colspan="2">0.50 CV</td>
+                      <td>7-16 gpm</td>
+                      <td><span class="metric">126–61 LPM</span></td>
                     </tr>
                     <tr>
                       <th>Rotation Speed</th>
@@ -149,18 +140,6 @@ master-slider: yes
                     <tr>
                       <th>Inlet Connection</th>
                       <td colspan="2">1/4 NPT, 1/4 BSPP</td>
-                    </tr>
-                    <tr>
-                      <th>Port Size</th>
-                      <td colspan="2">OD3M, M3</td>
-                    </tr>
-                    <tr>
-                      <th>Nozzle Type</th>
-                      <td colspan="2">OD3M</td>
-                    </tr>
-                    <tr>
-                      <th>Port Plug</th>
-                      <td colspan="2">OD3M 002</td>
                     </tr>
                     <tr>
                       <th>Diameter</th>
@@ -195,21 +174,17 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BA-LK-MP6R</td>
+                      <td colspan="2">BA-LKD-MP6R</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>10–22k psi</td>
-                      <td><span class="metric">690–1500 bar</span>
+                      <td>15–22k psi</td>
+                      <td><span class="metric">1034–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>5–20 gpm</td>
-                      <td><span class="metric">19–76 l/min</span></td>
-                    </tr>
-                    <tr>
-                      <th>Flow Coefficient</th>
-                      <td colspan="2">0.35 CV</td>
+                      <td>9.5-18.5 gpm</td>
+                      <td><span class="metric">36–70 LPM</span></td>
                     </tr>
                     <tr>
                       <th>Rotation Speed</th>
@@ -217,19 +192,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/8-24 MP RH</td>
-                    </tr>
-                    <tr>
-                      <th>Port Size</th>
-                      <td colspan="2">OD3M, M3</td>
-                    </tr>
-                    <tr>
-                      <th>Nozzle Type</th>
-                      <td colspan="2">OD3M</td>
-                    </tr>
-                    <tr>
-                      <th>Port Plug</th>
-                      <td colspan="2">OD3M 002</td>
+                      <td colspan="2">3/8 MP</td>
                     </tr>
                     <tr>
                       <th>Diameter</th>
@@ -264,21 +227,17 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BA-LK-MP9L, BA-LK-MP9R</td>
+                      <td colspan="2">BA-LKD-MP6R</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>10–22k psi</td>
-                      <td><span class="metric">690–1500 bar</span>
+                      <td>15–22k psi</td>
+                      <td><span class="metric">1034–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>5–15 gpm</td>
-                      <td><span class="metric">19–57 l/min</span></td>
-                    </tr>
-                    <tr>
-                      <th>Flow Coefficient</th>
-                      <td colspan="2">0.35 CV</td>
+                      <td>9.5-18.5 gpm</td>
+                      <td><span class="metric">36–70 LPM</span></td>
                     </tr>
                     <tr>
                       <th>Rotation Speed</th>
@@ -286,19 +245,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">9/16-18 MP LH &amp; RH</td>
-                    </tr>
-                    <tr>
-                      <th>Port Size</th>
-                      <td colspan="2">OD3M, M3</td>
-                    </tr>
-                    <tr>
-                      <th>Nozzle Type</th>
-                      <td colspan="2">OD3M</td>
-                    </tr>
-                    <tr>
-                      <th>Port Plug</th>
-                      <td colspan="2">OD3M 002</td>
+                      <td colspan="2">9/16 MP</td>
                     </tr>
                     <tr>
                       <th>Diameter</th>
@@ -337,7 +284,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Badger User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Badger Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
@@ -467,7 +414,7 @@ master-slider: yes
         <h5>Boiler Tube Cleaner</h5></a>
       </div>
       <div class="item">
-        <a href="/4inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-4in-02.jpg" alt="64inch Badger">
+        <a href="/4inch-badger"><img class="img-responsive" src="/assets/img/product/thumb-badger-4in-06.jpg" alt="64inch Badger">
         <h5>4" Badger</h5></a>
       </div>
       <div class="item">
