--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -68,16 +68,19 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
+      <p class="product-description promo-heading"><em>Now runs 3X longer between service intervals!</em></p>
       
-      <p class="product-description">The BJV is our most versatile line of pipe cleaning tools, designed for the widest range of configurations. A variety of head choices allow for pulling ring connections, customized porting and multiple jetting options. Different viscous fluid options allow operators the ability to change the speed of rotation for hard or easy applications. This tool has a wide range of centralizers, backout preventers, and automated delivery systems. BJV tools are also very productive tank and stack cleaners.</p>
+      <p class="product-description">Designed for a wide range of pipe diameters, pressures, flows, and configurations, BJV controlled rotary nozzles are the industry standard for cleaning medium  to large pipes and vessels.</p>
+      <p>The customizability of the BJV and its extensive range of accessories make it one of the most versatile nozzles in the industry. The tool can be configured for any pump/pressure/flow by swapping heads and modifying jet patterns and then combining with extensions, pull rings, centralizers or cages to accommodate a huge array of cleaning applications including pipes, stacks, tanks, rail cars, conveyors, tunnels, etc.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Clean everything from 6 in. (152 mm) pipes to 15 ft (4.5 m) diameter tanks with simple modifications</li>
-        <li>Interchangeable heads allow the tool to be used on any type of pump</li>
-        <li>Multiple head options to allow for flush mounted nozzles, extension arms, plugs, and pulling rings</li>
-        <li>Simple nozzle changes allow operators to configure for many cleaning applications</li>
-        <li>Easy to pair with AutoBox ABX-500</li>
+        <li>Most versatile nozzle in the industry</li>
+        <li>Compatible with a wide range of heads and jetting configurations for any pump up to 40k psi/2800 bar or up to 200 gpm/757 LPM</li>
+        <li>Can be customized and accessorized for cleaning pipes and vessels from 4” up to 60” in diameter under the most adverse conditions</li>
+        <li>10K, 15K, and 22K models run 3X longer between service intervals saving considerable  service cost with less downtime</li>
+        <li>Speed control guaranteed to be maintenance-free for three years</li>
+        <li>Pair with the <a href="/abx-500">AutoBox ABX-500</a> for a hands-free solution to many cleaning jobs</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -120,7 +123,7 @@ master-slider: yes
                   <tbody>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BJV-P16</td>
+                      <td colspan="2">BJVE-P16</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
@@ -130,7 +133,7 @@ master-slider: yes
                     <tr>
                       <th>Flow Range</th>
                       <td>20–200 gpm</td>
-                      <td><span class="metric">76–757 l/min</span></td>
+                      <td><span class="metric">76–757 LPM</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -138,7 +141,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Rotation Speed</th>
-                      <td colspan="2">10–80 rpm (Slow Fluid)<br>50–200 rpm (Fast Fluid)</td>
+                      <td colspan="2">25–95 rpm (Slow)<br>50–200 rpm (Medium)<br>85–300 rpm (Fast)</td>
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
@@ -146,11 +149,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Port Size</th>
-                      <td colspan="2">N/A</td>
-                    </tr>
-                    <tr>
-                      <th>Extension Port Size</th>
-                      <td colspan="2">1/2 NPT (P8), 3/4 NPT (P12)</td>
+                      <td colspan="2">1/4 NPT (P4), 1/2 NPT (P8)</td>
                     </tr>
                     <tr>
                       <th>Nozzle Type</th>
@@ -158,11 +157,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Port Plug</th>
-                      <td colspan="2">N/A</td>
-                    </tr>
-                    <tr>
-                      <th>Extension Port Plug</th>
-                      <td colspan="2">GP 025-P8, GP 025-P12</td>
+                      <td colspan="2">GP 025-P4SS, GP 025-P8SS</td>
                     </tr>
                     <tr>
                       <th>Swivel Diameter</th>
@@ -171,23 +166,23 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Swivel Length</th>
-                      <td>7.3 in.</td>
-                      <td><span class="metric">180 mm</span></td>
+                      <td>8.8 in.</td>
+                      <td><span class="metric">224 mm</span></td>
                     </tr>
                     <tr>
                       <th>Swivel Weight</th>
-                      <td>9.2 lb</td>
-                      <td><span class="metric">4.2 kg</span></td>
+                      <td>8.5 lb</td>
+                      <td><span class="metric">3.9 kg</span></td>
                     </tr>
                     <tr>
                       <th>Head Weight</th>
-                      <td>3–6 lb</td>
-                      <td><span class="metric">1.3–2.7 kg</span></td>
+                      <td>3.3 lb</td>
+                      <td><span class="metric">1.5 kg</span></td>
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
                       <td>160 &deg;F</td>
-                      <td><span class="metric">70 &deg;C</spam></td>
+                      <td><span class="metric">70 &deg;C</span></td>
                     </tr>
                   </tbody>
                   </table>
@@ -198,7 +193,7 @@ master-slider: yes
                   <tbody>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BJV-P12</td>
+                      <td colspan="2">BJVE-P12</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
@@ -208,7 +203,7 @@ master-slider: yes
                     <tr>
                       <th>Flow Range</th>
                       <td>12–100 gpm</td>
-                      <td><span class="metric">45–380 l/min</span></td>
+                      <td><span class="metric">45–380 LPM</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -216,7 +211,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Rotation Speed</th>
-                      <td colspan="2">5–80 rpm (Slow Fluid)<br>40–200 rpm (Fast Fluid)</td>
+                      <td colspan="2">20–95 rpm (Slow), 40–190 rpm (Medium), 70–275 rpm (Fast)</td>
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
@@ -224,7 +219,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Port Size</th>
-                      <td colspan="2">1/4 NPT (P4)</td>
+                      <td colspan="2">1/4 NPT (P4), 1/2 NPT (P8)</td>
                     </tr>
                     <tr>
                       <th>Extension Port Size</th>
@@ -236,11 +231,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Port Plug</th>
-                      <td colspan="2">GP 025-P4SS</td>
-                    </tr>
-                    <tr>
-                      <th>Extension Port Plug</th>
-                      <td colspan="2">GP 025-P8, GP 025-P12</td>
+                      <td colspan="2">GP 025-P4SS, GP 025-P8SS</td>
                     </tr>
                     <tr>
                       <th>Swivel Diameter</th>
@@ -249,18 +240,18 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Swivel Length</th>
-                      <td>7.3 in.</td>
-                      <td><span class="metric">180 mm</span></td>
+                      <td>8.8 in.</td>
+                      <td><span class="metric">224 mm</span></td>
                     </tr>
                     <tr>
                       <th>Swivel Weight</th>
-                      <td>8.6 lb</td>
+                      <td>8.5 lb</td>
                       <td><span class="metric">3.9 kg</span></td>
                     </tr>
                     <tr>
                       <th>Head Weight</th>
-                      <td>3–6 lb</td>
-                      <td><span class="metric">1.3–2.7 kg</span></td>
+                      <td>3.3 lb</td>
+                      <td><span class="metric">1.5 kg</span></td>
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
@@ -276,7 +267,7 @@ master-slider: yes
                   <tbody>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BJV-M24</td>
+                      <td colspan="2">BJVE-M24</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
@@ -286,7 +277,7 @@ master-slider: yes
                     <tr>
                       <th>Flow Range</th>
                       <td>12–100 gpm</td>
-                      <td><span class="metric">45–380 l/min</span></td>
+                      <td><span class="metric">45–380 LPM</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -294,7 +285,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Rotation Speed</th>
-                      <td colspan="2">5–80 rpm (Slow Fluid)<br>40–200 rpm (Fast Fluid)</td>
+                      <td colspan="2">20–95 rpm (Slow), 40–190 rpm (Medium), 70–275 rpm (Fast)</td>
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
@@ -302,11 +293,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Port Size</th>
-                      <td colspan="2">1/4 NPT (P4)</td>
-                    </tr>
-                    <tr>
-                      <th>Extension Port Size</th>
-                      <td colspan="2">G12</td>
+                      <td colspan="2">1/4 NPT (P4), G12</td>
                     </tr>
                     <tr>
                       <th>Nozzle Type</th>
@@ -318,7 +305,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Extension Port Plug</th>
-                      <td colspan="2">SA 058-G12</td>
+                      <td colspan="2">GP 025-P4SS, SA 058-G12</td>
                     </tr>
                     <tr>
                       <th>Swivel Diameter</th>
@@ -327,18 +314,18 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Swivel Length</th>
-                      <td>7.3 in.</td>
-                      <td><span class="metric">180 mm</span></td>
+                      <td>8.8 in.</td>
+                      <td><span class="metric">224 mm</span></td>
                     </tr>
                     <tr>
                       <th>Swivel Weight</th>
-                      <td>9.0 lb</td>
-                      <td><span class="metric">4.1 kg</span></td>
+                      <td>8.5 lb</td>
+                      <td><span class="metric">3.9 kg</span></td>
                     </tr>
                     <tr>
                       <th>Head Weight</th>
-                      <td>3–6 lb</td>
-                      <td><span class="metric">1.3–2.7 kg</span></td>
+                      <td>3.3 lb</td>
+                      <td><span class="metric">1.5 kg</span></td>
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
@@ -354,7 +341,7 @@ master-slider: yes
                   <tbody>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BJV-MP12</td>
+                      <td colspan="2">BJVE-MP12</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
@@ -363,28 +350,24 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>10–60 gpm</td>
-                      <td><span class="metric">38–114 l/min</span></td>
+                      <td>12–100 gpm</td>
+                      <td><span class="metric">45–380 LPM</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
-                      <td colspan="2">2.3 Cv</td>
+                      <td colspan="2">4.6 Cv</td>
                     </tr>
                     <tr>
                       <th>Rotation Speed</th>
-                      <td colspan="2">15–50 rpm (Slow Fluid)<br>70–300 rpm (Fast Fluid)</td>
+                      <td colspan="2">20–95 rpm (Slow), 40–190 rpm (Medium), 70–275 rpm (Fast)</td>
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/4 MP Gland</td>
+                      <td colspan="2">3/4 MP</td>
                     </tr>
                     <tr>
                       <th>Port Size</th>
-                      <td colspan="2">1/4 NPT (P4)</td>
-                    </tr>
-                    <tr>
-                      <th>Extension Port Size</th>
-                      <td colspan="2">G12</td>
+                      <td colspan="2">1/4 NPT (P4), G12</td>
                     </tr>
                     <tr>
                       <th>Nozzle Type</th>
@@ -395,28 +378,24 @@ master-slider: yes
                       <td colspan="2">GP 025-P4SS</td>
                     </tr>
                     <tr>
-                      <th>Extension Port Plug</th>
-                      <td colspan="2">SA 058-G12</td>
-                    </tr>
-                    <tr>
                       <th>Swivel Diameter</th>
                       <td>3.0 in.</td>
                       <td><span class="metric">76 mm</span></td>
                     </tr>
                     <tr>
                       <th>Swivel Length</th>
-                      <td>8.4 in.</td>
-                      <td><span class="metric">213 mm</span></td>
+                      <td>8.8 in.</td>
+                      <td><span class="metric">224 mm</span></td>
                     </tr>
                     <tr>
                       <th>Swivel Weight</th>
-                      <td>9.4 lb</td>
-                      <td><span class="metric">4.3 kg</span></td>
+                      <td>8.5 lb</td>
+                      <td><span class="metric">3.9 kg</span></td>
                     </tr>
                     <tr>
                       <th>Head Weight</th>
-                      <td>3–6 lb</td>
-                      <td><span class="metric">1.3–2.7 kg</span></td>
+                      <td>3.3 lb</td>
+                      <td><span class="metric">1.5 kg</span></td>
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
@@ -442,7 +421,7 @@ master-slider: yes
                     <tr>
                       <th>Flow Range</th>
                       <td>3.4–20 gpm</td>
-                      <td><span class="metric">13–76 l/min</span></td>
+                      <td><span class="metric">13–76 LPM</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -461,20 +440,12 @@ master-slider: yes
                       <td colspan="2">3/8-24 UNF (S6)</td>
                     </tr>
                     <tr>
-                      <th>Extension Port Size</th>
-                      <td colspan="2">G9</td>
-                    </tr>
-                    <tr>
                       <th>Nozzle Type</th>
                       <td colspan="2">OS6</td>
                     </tr>
                     <tr>
                       <th>Port Plug</th>
                       <td colspan="2">OS6 002</td>
-                    </tr>
-                    <tr>
-                      <th>Extension Port Plug</th>
-                      <td colspan="2">SA 058-G9</td>
                     </tr>
                     <tr>
                       <th>Swivel Diameter</th>
@@ -493,8 +464,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Head Weight</th>
-                      <td>3–6 lb</td>
-                      <td><span class="metric">1.3–2.7 kg</span></td>
+                      <td>3.3 lb</td>
+                      <td><span class="metric">15 kg</span></td>
                     </tr>
                     <tr>
                       <th>Maximum Water Temp.</th>
@@ -518,17 +489,14 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BJV-P16_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-P16 Tool Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BJV-P12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-P12 Tool Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BJV-M24_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-M24 Tool Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-MP12 Tool Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-H9 Tool Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual (up to 22k psi/1500 bar)</a></li>
+                <li><a href="/assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual (40k psi/2800 bar)</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Tool Talk</a> <em class="grey">- 03/2018</em></li>
+                <li><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Tool Talk</a></li>
                 <li><a href="http://jetting.stoneagetools.com" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
