--- a/solutions.html
+++ b/solutions.html
@@ -3,7 +3,7 @@ layout: default
 page-type: page
 title: Custom Engineered Waterblast Equipment Solutions 
 excerpt: Custom engineered waterblasting solutions for your most challening industrial cleaning jobs.
-permalink: /solutions-2
+permalink: /solutions
 master-slider: yes
 ---
 
