--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -274,6 +274,25 @@ permalink: /waterblast-tools-automated-equipment
         </table>
         <button>View Details</button>
       </a>
+    </div>    
+
+    <div class="mix exchanger-cleaning accessories" data-name="propositioner" data-designation="automated">
+      <a href="/propositioner" class="search-text">
+        <img src="/assets/img/product/propositioner-01.jpg" class="img-responsive" />
+        <h3>ProPositioner</h3>
+        <h5>For AutoBox ABX-PRO</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th colspan="2" style="text-align:center;">Ultra-portable indexing for single-lance tube cleaning</th>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align:center;">Quick to set up and easy to use</td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
     </div>
 
     <div class="mix exchanger-cleaning" data-name="rigid-lance-machine" data-designation="automated">
@@ -575,7 +594,7 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix pipe-cleaning" data-name="badger-2" data-designation="manual">
       <a href="/2inch-badger" class="search-text">
-        <img src="/assets/img/product/badger-2in-04.jpg" class="img-responsive" />
+        <img src="/assets/img/product/badger-2in-12.jpg" class="img-responsive" />
         <h3>Badger 2"</h3>
         <h5>Rotary cleaning nozzles for pipes with bends</h5>
         <table class="table">
@@ -596,7 +615,7 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix pipe-cleaning" data-name="badger-4" data-designation="manual">
       <a href="/4inch-badger" class="search-text">
-        <img src="/assets/img/product/badger-4in-02.jpg" class="img-responsive" />
+        <img src="/assets/img/product/badger-4in-06.jpg" class="img-responsive" />
         <h3>Badger 4"</h3>
         <h5>Rotary cleaning nozzles for pipes with bends</h5>
         <table class="table">
@@ -1249,7 +1268,7 @@ permalink: /waterblast-tools-automated-equipment
   <section class="container directory">
     <div class="mix pipe-cleaning" data-name="badger-2" data-designation="manual">
       <a href="/2inch-badger" class="search-text">
-        <img src="/assets/img/product/badger-2in-04.jpg" class="img-responsive" />
+        <img src="/assets/img/product/badger-2in-12.jpg" class="img-responsive" />
         <h3>Badger 2"</h3>
         <h5>Rotary cleaning nozzles for pipes with bends</h5>
         <table class="table">
@@ -1270,7 +1289,7 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix pipe-cleaning" data-name="badger-4" data-designation="manual">
       <a href="/4inch-badger" class="search-text">
-        <img src="/assets/img/product/badger-4in-02.jpg" class="img-responsive" />
+        <img src="/assets/img/product/badger-4in-06.jpg" class="img-responsive" />
         <h3>Badger 4"</h3>
         <h5>Rotary cleaning nozzles for pipes with bends</h5>
         <table class="table">
