--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -51,12 +51,12 @@ master-slider: yes
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=StoneAge Hose Containment for Automated Flex Lancing&body=Check out the StoneAge Lightweight Positioner for exchanger cleaning: http://www.stoneagetools.com/lightweight-positioner">E-mail link</a></li>
+            <li><a href="mailto:?subject=StoneAge Lightweight Positioner Automated Flex Lancing&body=Check out the StoneAge Lightweight Positioner for exchanger cleaning: http://www.stoneagetools.com/lightweight-positioner">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
       </div>
-      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-lwp" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
+<!--      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-lwp" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>-->
       
       <p class="product-description">The Lightweight Positioner (LWP) is a utility indexing system that can be paired with a variety of StoneAge automated systems for applications where controlled movement is required. The system is a proven workhorse for controlled, efficient, and safe cleaning of heat exchanger tube IDs. The LWP can also be paired with shotgun tools for tube sheet cleaning and surface preparation.</p>
       <p>It is specifically designed to be modular, lightweight, easy to setup, and expandable for use on a range of exchanger sizes or configurations.</p>
@@ -120,18 +120,11 @@ master-slider: yes
           </table>
           <p>&#42;<em>Custom rail lengths available</em></p>
         </div>
-        <aside class="col-sm-4 col-sm-offset-3 aside-box">
-          <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-2L" />
-          <h3>AutoPack-LWP</h3>
-          <p>Everything you need to successfully complete exchanger cleaning jobs &mdash; <span style="font-weight:400;">organized in a durable job box.</span><br /><a href="/autopack-lwp"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
-        </aside>
-<!--
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
           <h3>Need Support?</h3>
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
--->
       </section>
 
       <!-- Manuals/Docs -->
